--- a/Front/src/tpl/lander-edit-dialog.html
+++ b/Front/src/tpl/lander-edit-dialog.html
@@ -12,7 +12,7 @@
         <form name="editForm" ng-submit="ctrl.save()" class="form-horizontal">
             <div class="form-group">
                 <label class="col-sm-3 control-label">Name<span class="star-icon">*</span>：</label>
-                <div class="col-sm-5">
+                <div class="col-sm-8">
                     <input type="text" name="name" class="form-control" ng-model="item.name"
                         ng-change="nameChanged()"
                         ng-blur="nameRequired()"
@@ -28,7 +28,7 @@
             </div>
             <div class="form-group">
                 <label class="col-sm-3 control-label">Url<span class="star-icon">*</span>：</label>
-                <div class="col-sm-5">
+                <div class="col-sm-8">
                     <input my-text="" type="text" name="url" class="form-control" ng-model="item.url" ng-blur="validateUrl()" required>
                     <span style="color:red" ng-show="editForm.url.$dirty && editForm.url.$invalid">
                     <span ng-show="editForm.url.$error.required">Url is required.</span>
@@ -38,7 +38,7 @@
             </div>
             <div class="url-tokens-row form-group">
                 <label class="col-sm-3 control-label"></label>
-                <div class="col-sm-5">
+                <div class="col-sm-8">
                     <i>Available URL tokens:</i>
                     <div class="url-tokens">
                         <div class="url-token"
@@ -54,7 +54,7 @@
             </div>
             <div class="form-group">
                 <label class="col-sm-3 control-label">Number of offers<span class="star-icon">*</span>：</label>
-                <div class="col-sm-5">
+                <div class="col-sm-8">
                     <input type="text" name="numberOfOffers" class="form-control" ng-model="item.numberOfOffers" required>
                     <span style="color:red" ng-show="editForm.numberOfOffers.$dirty && editForm.numberOfOffers.$invalid">
                     <span ng-show="editForm.numberOfOffers.$error.required">NumberOfOffers is required.</span>
@@ -63,7 +63,8 @@
             </div>
             <div class="form-group">
                 <label class="col-sm-3 control-label">Country: </label>
-                <div class="col-sm-5">
+                <div class="col-sm-8 my-select">
+                    <i class="icon-sort-down"></i>
                     <select class="cs-subform-select" name="country"
                         ng-model="item.country"
                         ng-change="countryChanged(item.country)"
@@ -74,7 +75,7 @@
             </div>
             <div class="form-group">
                 <label class="col-sm-3 control-label">Tags：</label>
-                <div class="col-sm-5">
+                <div class="col-sm-8">
                     <selectize config='tagsFilter.config' options='tagsFilter.options' ng-model="tags"></selectize>
                     <!-- <md-chips
                             ng-model="tags"
