--- a/Front/src/tpl/setUp.html
+++ b/Front/src/tpl/setUp.html
@@ -50,7 +50,7 @@
           <md-button clipboard class="md-raised copy-btn" text="item.securepostbackurl" ng-click="itemUrlClick('copy4')">{{btn.copy4}}</md-button>
         </div>
     </div>-->
-    <div class="domain-p">
+    <!--<div class="domain-p">
 
       <p><i class="material-icons">info_outline</i> In cases when your affiliate network only supports client-side pixels, you can use a conversion pixel or script. Conversion pixels are cookie-based and so you have to use the same domain for the cookie to work correctly. The cid is also stored in a cookie, so conversion tracking will still work if the parameter is missing.</p>
       <p>Consult your affiliate network documentation or support to find out how to specify conversion pixels in their web panel. The payout parameter is optional, if you do not use it, you can manually specify payout in the offer configuration.</p>
@@ -82,7 +82,7 @@
         <div class="col-md-3">
           <md-button clipboard class="md-raised copy-btn" text="item.trackingscript" ng-click="itemUrlClick('copy7')">{{btn.copy7}}</md-button>
         </div>
-    </div>
+    </div>-->
     </div>
   </div>
 </div>
