--- a/Front/src/tpl/invoices-paypal-dialog.html
+++ b/Front/src/tpl/invoices-paypal-dialog.html
@@ -39,7 +39,7 @@
           </div>
         </md-input-container>
       </div>
-      <p class="footer-p">Voluum takes credit card data security very seriously. For that reason, we use Braintree to securely handle credit card information. Braintree is a Validated Level 1 PCI DSS Compliant Service Provider.</p>
+      <p class="footer-p">Newbidder takes credit card data security very seriously. For that reason, we use Braintree to securely handle credit card information. Braintree is a Validated Level 1 PCI DSS Compliant Service Provider.</p>
     </form>
   </md-dialog-content>
   <md-dialog-actions>
