--- a/Front/src/tpl/setUp.html
+++ b/Front/src/tpl/setUp.html
@@ -4,7 +4,7 @@
   <div class="setUp-page">
     <div class="domain-p">
 
-      <p><i class="material-icons">info_outline</i>With Voluum you don't need to place any PHP code on your landing pages. Visitors are redirected based on data stored in a cookie and referrer.</p>
+      <p><i class="material-icons">info_outline</i>With Newbidder you don't need to place any PHP code on your landing pages. Visitors are redirected based on data stored in a cookie and referrer.</p>
       <p>If your landing page has a single offer placement (within which you can have one offer, or rotate many), use the "Click URL". If your LP displays more than one offer, use the multi-offer click URL with the number at the end being the offer №. For example, if your landing page displays three offers, you'll need to add click links that end with /click/1, /click/2 and /click/3. You will then need to add/edit the LP in Voluum and set the "Number of offers" to 3.</p>
     </div>
     <div class="form-group referral-group clearfix">
