--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -262,7 +262,7 @@
         <ul>
         <li class="w-md w-md3 h-line">
             <div class="p-header-box">
-                <h2>ENTERPRISE</h2>
+                <h2>STARTER</h2>
                 <div class="p-header">
                     <small class="money-icon">$</small>
                     <span class="money-size">39</span>
@@ -287,7 +287,7 @@
             </div></li>
         <li class="w-md w-md3 h-line2">
             <div class="p-header-box">
-                <h2>ENTERPRISE</h2>
+                <h2>PRO</h2>
                 <div class="p-header">
                     <small class="money-icon">$</small>
                     <span class="money-size">89</span>
@@ -312,7 +312,7 @@
             </div></li>
         <li class="w-md w-md3 h-line3">
             <div class="p-header-box">
-            <h2>PRO</h2>
+            <h2>AGENCY</h2>
             <div class="p-header">
                 <small class="money-icon">$</small>
                 <span class="money-size">299</span>
@@ -337,7 +337,7 @@
         </div></li>
         <li class="w-md w-md3 h-line4">
             <div class="p-header-box">
-                <h2>AGENCY</h2>
+                <h2>ENTERPRISE</h2>
                 <div class="p-header">
                     <small class="money-icon">$</small>
                     <span class="money-size">899</span>
@@ -566,16 +566,6 @@
         </tr>
         <tr>
             <td>Good UI and UX</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td class="included">✓</td>
-        </tr>
-        <tr>
-            <td>Optimization rule</td>
             <td></td>
             <td></td>
             <td></td>
