--- a/Front/src/tpl/report.html
+++ b/Front/src/tpl/report.html
@@ -32,7 +32,7 @@
                 </select>
             </div>
         </div>
-        <div class="right-select">
+        <div class="right-select" ng-class="{'right-select2': datetype == '0'}">
             <div class="cs-subform-control search-con">
                 <input type="text" class="cs-filter-input" ng-model="searchFilter" placeholder="Search...">
                 <i class="icon-search md-24" ng-click="applySearch($event)"></i>
