conversion upload update

--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -83,6 +83,7 @@
 <script src="js/controllers/signin.js"></script>
 <script src="js/controllers/profile.js"></script>
 <script src="js/controllers/setUp.js"></script>
+<script src="js/controllers/conversionUpload.js"></script>
 <script src="js/controllers/referralProgram.js"></script>
 <script src="js/controllers/subscriptions.js"></script>
 <script src="js/controllers/userManagement.js"></script>
