--- a/Front/src/tpl/setApp.html
+++ b/Front/src/tpl/setApp.html
@@ -88,6 +88,12 @@
                     <span>{{'eventLog' | translate}}</span>
                 </a>
             </li>
+            <li ui-sref-active="active">
+                <a ui-sref="setApp.conversionUpload" md-ink-ripple>
+                    <i class="icon-cloud-upload"></i>
+                    <span>{{'conversionUpload' | translate}}</span>
+                </a>
+            </li>
         </ul>
     </nav>
 </md-sidenav>
