--- a/Front/src/tpl/botBlacklist-edit-dialog.html
+++ b/Front/src/tpl/botBlacklist-edit-dialog.html
@@ -16,7 +16,7 @@
             <div class="form-group">
                 <label>Name</label>
                 <input type="text" name="name" class="form-control" placeholder="Name" ng-model="item.name" required>
-                <span style="color:red" ng-show="editForm.name.$dirty && editForm.name.$invalid">
+                <span style="color:red" ng-show="editForm.name.$touched && editForm.name.$invalid">
                         <span ng-show="editForm.name.$error.required">Name is required.</span>
                         </span>
             </div>
