修改server.js userPreferences的数据

--- a/Front/src/tpl/conversion.html
+++ b/Front/src/tpl/conversion.html
@@ -85,7 +85,7 @@
                         ng-repeat="column in columns"
                         ng-show="preferences.reportViewColumns['conversion_' + column.key].visible"
                     >
-                        {{row[column.key]}}
+                        <span>{{row[column.key]}}</span>
                     </td>
                 </tr>
             </tbody>
