--- a/Front/src/tpl/report.html
+++ b/Front/src/tpl/report.html
@@ -89,17 +89,17 @@
             <div class="view_column" ng-click="viewColumnClick()">
                 <div class="view_column_con" ng-show="viewColumnIsShow">
                     <ul class="view_column_list">
-                        <li ng-repeat="item in columns" ng-click="checkboxIsChecked(item.key)">
+                        <li ng-repeat="item in columns" ng-click="checkboxIsChecked($event, item.key)">
                             <input type="checkbox" ng-model="reportViewColumns[item.key].visible" ng-checked="preferences.reportViewColumns[item.key].visible" ng-click="checkboxInput($event)">{{item.name}}
                         </li>
                     </ul>
                     <div class="my-btn">
-                        <md-button class="md-raised md-primary cs-compact cs-add-button" ng-click="applyChange()">
+                        <md-button class="md-raised md-primary cs-compact cs-add-button" ng-click="applyChange($event)">
                             <i class="icon-ok"></i>
                             {{'apply changes' | translate}}
                         </md-button>
 
-                        <md-button class="md-raised md-primary cs-compact cs-add-button"  ng-click="viewCloumnClose()">
+                        <md-button class="md-raised md-primary cs-compact cs-add-button"  ng-click="viewCloumnClose($event)">
                             <i class="icon-remove"></i>
                             {{'close' | translate}}
                         </md-button>
