修改setting页面的setup数据绑定

--- a/Front/src/tpl/setUp.html
+++ b/Front/src/tpl/setUp.html
@@ -10,19 +10,19 @@
     <div class="form-group referral-group clearfix">
         <label class="col-sm-3 control-label">Click URL</label>
         <div class="col-sm-6">
-          <input type="text" class="form-control" ng-model="item.clickurl">
+          <input type="text" class="form-control" ng-model="item.clickUrl">
         </div>
         <div class="col-md-3">
-          <md-button clipboard class="md-raised copy-btn" text="item.clickurl" ng-click="itemUrlClick('copy1')">{{btn.copy1}}</md-button>
+          <md-button clipboard class="md-raised copy-btn" text="item.clickUrl" ng-click="itemUrlClick('copy1')">{{btn.copy1}}</md-button>
         </div>
     </div>
     <div class="form-group referral-group clearfix">
         <label class="col-sm-3 control-label">Multi-offer click URL</label>
         <div class="col-sm-6">
-          <input type="text" class="form-control" ng-model="item.multiofferclickurl">
+          <input type="text" class="form-control" ng-model="item.mutiClickUrl">
         </div>
         <div class="col-md-3">
-          <md-button clipboard class="md-raised copy-btn" text="item.multiofferclickurl" ng-click="itemUrlClick('copy2')">{{btn.copy2}}</md-button>
+          <md-button clipboard class="md-raised copy-btn" text="item.mutiClickUrl" ng-click="itemUrlClick('copy2')">{{btn.copy2}}</md-button>
         </div>
     </div>
     <div class="domain-p">
@@ -35,10 +35,10 @@
     <div class="form-group referral-group clearfix">
         <label class="col-sm-2 control-label">Postback URL</label>
         <div class="col-sm-7">
-          <input type="text" class="form-control" ng-model="item.postbackurl">
+          <input type="text" class="form-control" ng-model="item.postBackUrl">
         </div>
         <div class="col-md-3">
-          <md-button clipboard class="md-raised copy-btn" text="item.postbackurl" ng-click="itemUrlClick('copy3')">{{btn.copy3}}</md-button>
+          <md-button clipboard class="md-raised copy-btn" text="item.postBackUrl" ng-click="itemUrlClick('copy3')">{{btn.copy3}}</md-button>
         </div>
     </div>
     <!--<div class="form-group clearfix">
