--- a/Front/src/tpl/userManagement.html
+++ b/Front/src/tpl/userManagement.html
@@ -38,12 +38,12 @@
 			<label for="exampleInputEmail2">List of users:</label>
 			<div class="form-inline user-list">
 				<span><i class="material-icons">account_box</i> {{profile.name}}</span>
-				<button type="submit" class="btn btn-primary">owner</button>
 				<span>{{profile.email}}</span>
+				<button type="submit" class="btn btn-primary">owner</button>
 			</div>
 			<div class="form-inline user-list" ng-repeat="user in users">
 				<span><i class="material-icons">account_box</i> {{user.name}}</span>
-				<span>{{item.email}}</span>
+				<span>{{user.email}}</span>
 			</div>
 		</div>
 		<div class="form-group">
