--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -628,21 +628,21 @@
             <div class="col-md-4 col-xs-6">
                 <h5>Contact us,we're happy to assist you any time!</h5>
                 <div class="contant-form">
-                    <form method="post" action="/advertisers" data-ga-label="Contact Us (Footer)">
+                    <form data-ga-label="Contact Us (Footer)">
                         <div class="form-line">
                             <input type="text" name="site" id="site" value="" placeholder="Website URL *" class="textfild">
                             <input type="text" name="email" id="email" value="" placeholder="Email Address *" class="textfild">
                         </div>
-                        <input type="text" name="phone" value="" placeholder="Tel" class="textfild2">
-                        <div class="select ">
+                        <input type="text" name="phone" id="tel" value="" placeholder="Tel" class="textfild2">
+                        <div class="select">
                             <span class="placeholder">I Want to</span>
                             <ul>
                                 <li>Acquire visitors to my page(s)</li>
                                 <li>Monetize my website</li>
                             </ul>
                         </div>
-                        <textarea name="body" id="body" placeholder="Your Message" rows="24" cols="80"></textarea>
-                        <button class="formBtn" type="button">Submit</button>
+                        <textarea name="body" id="msg" placeholder="Your Message" rows="24" cols="80"></textarea>
+                        <button class="formBtn" id="submit" type="button">Submit</button>
                     </form>
                 </div>
             </div>
@@ -665,7 +665,23 @@
     })
 </script>
 
-<script src="js/jquery-2.1.1.min.js" type="text/javascript"></script>
+<script src="js/jquery-2.1.1.min.js" type="text/javascript">
+    function onSuccess(data){}
+    $(document).ready(function(){
+      $(".formBtn").click(function(){
+          var url = "http://127.0.0.1:3030/contact?callback=onSuccess";
+          url += "&site=" + escape($("#site").val());
+          url += "&email=" + escape($("#email").val());
+          url += "&tel=" + escape($("#tel").val());
+          url += "&msg=" + escape($("#msg").val());
+          url += "&intention="+escape($(".select span").text());
+          var script = document.createElement('script');
+          script.setAttribute('type', 'text/javascript');
+          script.src = url;
+          document.body.appendChild(script);
+      });
+    });
+</script>
 <script src="js/bootstrap.min.js"></script>
 <script>
     $(function () {
