--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -80,7 +80,7 @@
             </li>
             <li ui-sref-active="active">
                 <a ui-sref="app.report.conversion" md-ink-ripple>
-                    <i class="icon-globe"></i>
+                    <i class="icon-usd"></i>
                     <span>{{'Conversions' | translate}}</span>
                 </a>
             </li>
