--- a/Front/src/tpl/conversion.html
+++ b/Front/src/tpl/conversion.html
@@ -44,29 +44,29 @@
             </div>
             <md-button class="md-raised md-primary cs-compact cs-add-button" ng-click="applySearch($event)" translate>apply</md-button>
             <div class="view_column" ng-click="viewColumnClick()">
+                <div class="view_column_con" ng-show="viewColumnIsShow">
+                    <ul class="view_column_list">
+                        <li ng-repeat="item in columns" ng-click="checkboxIsChecked($event, 'conversion_' + item.key)">
+                          <input type="checkbox" ng-model="reportViewColumns['conversion_' + item.key].visible"
+                            ng-checked="preferences.reportViewColumns['conversion_' + item.key].visible"
+                            ng-click="checkboxInput($event)"
+                          >{{item.name}}
+                        </li>
+                    </ul>
+                    <div class="my-btn">
+                    <md-button class="md-raised md-primary cs-compact cs-add-button" ng-click="applyChange($event)">
+                        <i class="icon-ok"></i>
+                        {{'apply changes' | translate}}
+                    </md-button>
+                    
+                    <md-button class="md-raised md-primary cs-compact cs-add-button"  ng-click="viewCloumnClose($event)">
+                        <i class="icon-remove"></i>
+                        {{'close' | translate}}
+                    </md-button>
+                    </div>
+                </div>
                 <i class="material-icons view-column-icon">view_column</i>
                 <i class="material-icons arrow-down-icon">keyboard_arrow_down</i>
-            </div>
-            <div class="view_column_con" ng-show="viewColumnIsShow">
-                <ul class="view_column_list">
-                    <li ng-repeat="item in columns" ng-click="checkboxIsChecked('conversion_' + item.key)">
-                      <input type="checkbox" ng-model="reportViewColumns['conversion_' + item.key].visible"
-                        ng-checked="preferences.reportViewColumns['conversion_' + item.key].visible"
-                        ng-click="checkboxInput($event)"
-                      >{{item.name}}
-                    </li>
-                </ul>
-                <div class="my-btn">
-                <md-button class="md-raised md-primary cs-compact cs-add-button" ng-click="applyChange()">
-                    <i class="icon-ok"></i>
-                    {{'apply changes' | translate}}
-                </md-button>
-                
-                <md-button class="md-raised md-primary cs-compact cs-add-button"  ng-click="viewCloumnClose()">
-                    <i class="icon-remove"></i>
-                    {{'close' | translate}}
-                </md-button>
-                </div>
             </div>
         </div>
     </div>
@@ -91,7 +91,7 @@
             </tbody>
             <tfoot md-body ng-if="report.totalRows != 0">
                 <tr md-row>
-                    <td md-cell>Total</td>
+                    <td md-cell ng-show="preferences.reportViewColumns['conversion_' + columns[0].key].visible">Total</td>
                     <td md-cell ng-repeat="column in columns" ng-show="preferences.reportViewColumns['conversion_' + column.key].visible && !$first">{{report.totals[column.key]}}</td>
                 </tr>
             </tfoot>
