--- a/Front/src/tpl/conversionUpload.html
+++ b/Front/src/tpl/conversionUpload.html
@@ -9,8 +9,9 @@
     <textarea name="conversionContent" class="upload-con clearfix" ng-model="conversionContent" required></textarea>
     <span style="color:red" ng-show="form.conversionContent.$dirty && form.conversionContent.$invalid">
       <span ng-show="form.conversionContent.$error.required">conversionContent is required.</span>
-      <span ng-show="form.conversionContent.$error.valid">conversionContent is invalid.</span>
+      <span ng-show="form.conversionContent.$error.validate">conversionContent is invalid.</span>
     </span>
+    <span style="color: red" ng-show="errorMessage">{{errorMessage}}</span>
   </form>
   <div class="profile-form-footer clearfix">
     <md-button class="save-btn" ng-click="conversionSave()">
