--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -612,7 +612,7 @@
                 <h4 class="con-title">Get Connected</h4>
                 <ul class="list-01">
                     <li><a href="https://www.facebook.com/newbidder" target="_blank"><i class="icon-facebook-sign"></i>Facebook</a></li>
-                    <li><a href="https://twitter.com/new_bidder" target="_blank"><i class="icon-twitter-sign"></i>Twitter</a></li>
+                    <li><a href="https://twitter.com/newbidder" target="_blank"><i class="icon-twitter-sign"></i>Twitter</a></li>
                     <li><a href="#" target="_blank"><i class="icon-linkedin-sign"></i>LinkedIn</a></li>
                 </ul>
                 </div>
@@ -667,20 +667,20 @@
 
 <script src="js/jquery-2.1.1.min.js" type="text/javascript">
     function onSuccess(data){}
-    $(document).ready(function(){
-      $(".formBtn").click(function(){
-          var url = "http://52.198.230.169:3030/contact?callback=onSuccess";
-          url += "&site=" + escape($("#site").val());
-          url += "&email=" + escape($("#email").val());
-          url += "&tel=" + escape($("#tel").val());
-          url += "&msg=" + escape($("#msg").val());
-          url += "&intention="+escape($(".select span").text());
-          var script = document.createElement('script');
-          script.setAttribute('type', 'text/javascript');
-          script.src = url;
-          document.body.appendChild(script);
-      });
+    // $(document).ready(function(){
+    $(".formBtn").click(function(){
+        var url = "http://52.198.230.169:3030/contact?callback=onSuccess";
+        url += "&site=" + escape($("#site").val());
+        url += "&email=" + escape($("#email").val());
+        url += "&tel=" + escape($("#tel").val());
+        url += "&msg=" + escape($("#msg").val());
+        url += "&intention="+escape($(".select span").text());
+        var script = document.createElement('script');
+        script.setAttribute('type', 'text/javascript');
+        script.src = url;
+        document.body.appendChild(script);
     });
+    // });
 </script>
 <script src="js/bootstrap.min.js"></script>
 <script>
