--- a/Front/src/tpl/report.html
+++ b/Front/src/tpl/report.html
@@ -161,7 +161,8 @@
             <tfoot md-body ng-if="report.totalRows != 0">
               <tr md-row>
                 <td md-cell ng-if="treeLevel>1"></td>
-                <td md-cell ng-show="preferences.reportViewColumns[columns[0].key].visible">Total</td>
+                <td md-cell ng-if="treeLevel>1">Total</td>
+                <td md-cell ng-if="preferences.reportViewColumns[columns[0].key].visible">Total</td>
                 <td md-cell ng-repeat="column in columns" ng-show="preferences.reportViewColumns[column.key].visible && !$first">{{report.totals[column.key]}}</td>
                 <!-- <td md-cell></td> -->
               </tr>
