删除暂停、删除一些字段

--- a/Front/src/tpl/app.html
+++ b/Front/src/tpl/app.html
@@ -89,7 +89,7 @@
             </li>
             <li ui-sref-active="active">
                 <a ui-sref="app.report.tsreport" md-ink-ripple>
-                    <i class="icon-globe"></i>
+                    <i class="icon-book"></i>
                     <span>{{'TS Report' | translate}}</span>
                 </a>
             </li>
