--- a/Front/src/tpl/ts-reference-dialog.html
+++ b/Front/src/tpl/ts-reference-dialog.html
@@ -6,7 +6,7 @@
     </md-toolbar>
     <md-dialog-content class="md-dialog-content">
         <form name="editForm" ng-submit="ctrl.save()" class="form-horizontal">
-            <div class="form-group">
+            <!-- <div class="form-group">
                 <label class="col-sm-3 control-label">Name<span class="star-icon">*</span>:</label>
                 <div class="col-sm-8">
                     <input type="text" name="name" class="form-control" ng-model="formData.name" required/>
@@ -14,7 +14,7 @@
                         <span ng-show="editForm.name.$error.required">Name is required.</span>
                     </span>
                 </div>
-            </div>
+            </div> -->
             <div class="form-group">
                 <label class="col-sm-3 control-label">TS<span class="star-icon">*</span>:</label>
                 <div class="col-sm-8">
@@ -27,12 +27,12 @@
                     </span>
                 </div>
             </div>
-            <div class="form-group">
+            <!-- <div class="form-group">
                 <label class="col-sm-3 control-label">API:</label>
                 <div class="col-sm-8">
                     <input type="text" class="form-control" disabled ng-model="formData.api"/>
                 </div>
-            </div>
+            </div> -->
             <div class="form-group">
                 <label class="col-sm-3 control-label">Token<span class="star-icon">*</span>:</label>
                 <div class="col-sm-8">
