--- a/Front/src/tpl/subscriptions.html
+++ b/Front/src/tpl/subscriptions.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="assets/css/style.css"/>
+
 <h1 class="setting-title">Subscriptions</h1>
 
 <div class="form-column profile-content subscription">
