--- a/Front/src/tpl/domain.html
+++ b/Front/src/tpl/domain.html
@@ -4,7 +4,7 @@
     <div class="domain-p">
 
       <p><i class="material-icons">info_outline</i>Here you can add your custom tracking domains. We highly recommend adding a custom domain.
-      The default Newbiddertrk.com is meant for testing purposes only.</p>
+      The default Newbidder.com is meant for testing purposes only.</p>
     </div>
     <p>In order to add a domain you will need to CNAME one of following domains:
         <b><em ng-repeat="internal in item.internal track by $index">{{internal.address}}<em ng-if="$index < item.internal.length-1">, </em><em ng-if="$index == item.internal.length-1">.</em></em></b>
