--- a/Front/src/tpl/conversion.html
+++ b/Front/src/tpl/conversion.html
@@ -6,7 +6,7 @@
                 <i class="icon-search md-24" ng-click="applySearch($event)"></i>
             </div>
             <div class="cs-subform-control">
-                <md-select class="cs-subform-select" ng-model="datetype">
+                <md-select aria-label="select" class="cs-subform-select" ng-model="datetype">
                     <md-option value="1">Today</md-option>
                     <md-option value="2">Yesterday</md-option>
                     <md-option value="3">Last 7 days</md-option>
