--- a/Front/src/tpl/report.html
+++ b/Front/src/tpl/report.html
@@ -35,7 +35,7 @@
                 <i class="icon-search md-24" ng-click="applySearch($event)"></i>
             </div>
             <div class="cs-subform-control">
-                <md-select class="cs-subform-select" ng-model="datetype">
+                <md-select aria-label="select" class="cs-subform-select" ng-model="datetype">
                     <md-option value="1">Today</md-option>
                     <md-option value="2">Yesterday</md-option>
                     <md-option value="3">Last 7 days</md-option>
@@ -74,7 +74,7 @@
 
 
             <div class="selectAll">
-                <md-select class="cs-subform-select" ng-model="activeStatus" required>
+                <md-select aria-label="select" class="cs-subform-select" ng-model="activeStatus" required>
                     <md-option value="0">Archived</md-option>
                     <md-option value="1">Active</md-option>
                     <md-option value="2">All</md-option>
