解决引用问题

--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="assets/css/material-icons.css"/>
     <link rel="stylesheet" href="assets/css/app.css"/>
     <link rel="stylesheet" href="assets/css/my.css"/>
+    <link rel="stylesheet" href="assets/css/style.css"/>
     <!-- endbuild -->
 
     <style type="text/css">
