--- a/Front/src/tpl/signup.html
+++ b/Front/src/tpl/signup.html
@@ -1,5 +1,5 @@
 <div class="container w-xxxxl w-auto-xs">
-    <div class="navbar-brand block m-t"><img src="assets/img/logo-two.png"></div>
+    <div class="navbar-brand block m-t"><img src="../assets/img/logo-two.png"></div>
     <div class="m-b-lg">
         <form name="form" class="form-horizontal">
             <div class="form-group">
