--- a/Front/src/tpl/signin.html
+++ b/Front/src/tpl/signin.html
@@ -1,5 +1,5 @@
 <div class="container w-xxl w-auto-xs w-top">
-    <div class="navbar-brand block m-t"><img src="assets/img/logo-two.png"></div>
+    <div class="navbar-brand block m-t"><img src="../assets/img/logo-two.png"></div>
     <div class="m-b-lg">
         <form name="form" class="form-validation">
             <div class="list-group list-group-sm">
