dashboard设置默认值, 用户登录以后根据设置的home screen跳转页面

--- a/Front/src/tpl/dashBoard.html
+++ b/Front/src/tpl/dashBoard.html
@@ -9,7 +9,7 @@
     <div class="cs-action-bar clearfix">
         <div class="right-select">
             <div class="cs-subform-control">
-                <md-select class="cs-subform-select" ng-model="datetype">
+                <md-select aria-label="select" class="cs-subform-select" ng-model="datetype">
                     <md-option value="1">Today</md-option>
                     <md-option value="2">Yesterday</md-option>
                     <md-option value="3">Last 7 days</md-option>
