--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -282,57 +282,57 @@
                     <li class="hg"><em>&times;</em></li>
                     <li class="hg"><em>&times;</em></li>
                 </ol>
-                <button class="btn p-btn btn-three p-btn-01" type="button"><p>SELECT PLAN<i class="icon-angle-right"></i></p></button>
+                <!--<button class="btn p-btn btn-three p-btn-01" type="button"><p>SELECT PLAN<i class="icon-angle-right"></i></p></button>-->
 
-            </div></li>
-        <li class="w-md w-md3 h-line2">
-            <div class="p-header-box">
-                <h2>PRO</h2>
-                <div class="p-header">
-                    <small class="money-icon">$</small>
-                    <span class="money-size">89</span>
-                    <small class="money-small">/ Mon</small>
-                </div>
-                <div class="pricedesc">
-                    <p>1000000 includedevents</p>
-                    <p>0.035/1000 overage charge</p>
-                </div>
-                <ol class="pricedesc-list">
-                    <li>5 Traffic <b>Source RAW Report</b></li>
-                    <li>Skype Support 24/7</li>
-                    <li>6 month data <b>retention</b></li>
-                    <li>5 custom tracking <b>domains</b></li>
-                    <li>Newbidder DSP (event not included)</li>
-                    <li>Affiliate Network Offer <b>Management</b></li>
-                    <li>1 additional users</li>
-                    <li>10% volume discount</li>
-                </ol>
-                <button class="btn p-btn btn-three p-btn-02" type="button"><p>SELECT PLAN<i class="icon-angle-right"></i></p></button>
+             </div></li>
+         <li class="w-md w-md3 h-line2">
+             <div class="p-header-box">
+                 <h2>PRO</h2>
+                 <div class="p-header">
+                     <small class="money-icon">$</small>
+                     <span class="money-size">89</span>
+                     <small class="money-small">/ Mon</small>
+                 </div>
+                 <div class="pricedesc">
+                     <p>1000000 includedevents</p>
+                     <p>0.035/1000 overage charge</p>
+                 </div>
+                 <ol class="pricedesc-list">
+                     <li>5 Traffic <b>Source RAW Report</b></li>
+                     <li>Skype Support 24/7</li>
+                     <li>6 month data <b>retention</b></li>
+                     <li>5 custom tracking <b>domains</b></li>
+                     <li>Newbidder DSP (event not included)</li>
+                     <li>Affiliate Network Offer <b>Management</b></li>
+                     <li>1 additional users</li>
+                     <li>10% volume discount</li>
+                 </ol>
+                 <!--<button class="btn p-btn btn-three p-btn-02" type="button"><p>SELECT PLAN<i class="icon-angle-right"></i></p></button>!-->
 
-            </div></li>
-        <li class="w-md w-md3 h-line3">
-            <div class="p-header-box">
-            <h2>AGENCY</h2>
-            <div class="p-header">
-                <small class="money-icon">$</small>
-                <span class="money-size">299</span>
-                <small class="money-small">/ Mon</small>
-            </div>
-            <div class="pricedesc">
-                <p>10000000 included events</p>
-            <p>0.03/1000 overage charge</p>
-            </div>
-            <ol class="pricedesc-list">
-                <li>10 Traffic <b>Source RAW Report</b> (in the list,3 can be custom)</li>
-                <li>Skype Support 24/7</li>
-                <li>1 year data retention</li>
-                <li>10 custom <b>tracking domains</b></li>
-                <li>Newbidder DSP (event not included)</li>
-                <li>Affiliate Network Offer <b>Management</b></li>
-                <li>2 additional users</li>
-                <li>15% volume discount</li>
-            </ol>
-                <button class="btn p-btn btn-three p-btn-03" type="button"><p>SELECT PLAN<i class="icon-angle-right"></i></p></button>
+           </div></li>
+       <li class="w-md w-md3 h-line3">
+           <div class="p-header-box">
+           <h2>AGENCY</h2>
+           <div class="p-header">
+               <small class="money-icon">$</small>
+               <span class="money-size">299</span>
+               <small class="money-small">/ Mon</small>
+           </div>
+           <div class="pricedesc">
+               <p>10000000 included events</p>
+           <p>0.03/1000 overage charge</p>
+           </div>
+           <ol class="pricedesc-list">
+               <li>10 Traffic <b>Source RAW Report</b> (in the list,3 can be custom)</li>
+               <li>Skype Support 24/7</li>
+               <li>1 year data retention</li>
+               <li>10 custom <b>tracking domains</b></li>
+               <li>Newbidder DSP (event not included)</li>
+               <li>Affiliate Network Offer <b>Management</b></li>
+               <li>2 additional users</li>
+               <li>15% volume discount</li>
+           </ol>
+               <!--<button class="btn p-btn btn-three p-btn-03" type="button"><p>SELECT PLAN<i class="icon-angle-right"></i></p></button>!-->
 
         </div></li>
         <li class="w-md w-md3 h-line4">
@@ -357,7 +357,7 @@
                     <li>5 additional users</li>
                     <li>20% volume discount</li>
                 </ol>
-                <button class="btn p-btn btn-three p-btn-04" type="button"><p>SELECT PLAN<i class="icon-angle-right"></i></p></button>
+                <!--<button class="btn p-btn btn-three p-btn-04" type="button"><p>SELECT PLAN<i class="icon-angle-right"></i></p></button>-->
             </div>
         </li>
     </ul>
@@ -376,7 +376,7 @@
                         </div>
                         <div class="col-sm-3 col-md-3">
                             <input type="text" name="eventsSliderNumber" value="" class="eventsSliderNumber numberField" placeholder="">
-                            <button class="register-btn btn-three" type="button">Sign in</button>
+                            <a href="http://beta.newbidder.com/#/access/signin"><button class="register-btn btn-three" type="button">Sign in</button></a>
                             </div>
                         </div>
                     </div>
@@ -613,7 +613,6 @@
                 <ul class="list-01">
                     <li><a href="https://www.facebook.com/newbidder" target="_blank"><i class="icon-facebook-sign"></i>Facebook</a></li>
                     <li><a href="https://twitter.com/newbidder" target="_blank"><i class="icon-twitter-sign"></i>Twitter</a></li>
-                    <li><a href="#" target="_blank"><i class="icon-linkedin-sign"></i>LinkedIn</a></li>
                 </ul>
                 </div>
                 <div class="col-xs-12 col-md-6">
@@ -625,35 +624,33 @@
                 </div>
                 </div>
             </div>
-            <div class="col-md-4 col-xs-6">
-                <h5>Contact us,we're happy to assist you any time!</h5>
-                <div class="contant-form">
-                    <form data-ga-label="Contact Us (Footer)">
-                        <div class="form-line">
-                            <input type="text" name="site" id="site" value="" placeholder="Website URL *" class="textfild">
-                            <input type="text" name="email" id="email" value="" placeholder="Email Address *" class="textfild">
-                        </div>
-                        <input type="text" name="phone" id="tel" value="" placeholder="Tel" class="textfild2">
-                        <div class="select">
-                            <span class="placeholder">I Want to</span>
-                            <ul>
-                                <li>Acquire visitors to my page(s)</li>
-                                <li>Monetize my website</li>
-                            </ul>
-                        </div>
-                        <textarea name="body" id="msg" placeholder="Your Message" rows="24" cols="80"></textarea>
-                        <button class="formBtn" id="submit" type="button">Submit</button>
-                    </form>
-                </div>
-            </div>
+            <!--<div class="col-md-4 col-xs-6">-->
+                <!--<h5>Contact us,we're happy to assist you any time!</h5>-->
+                <!--<div class="contant-form">-->
+                    <!--<form data-ga-label="Contact Us (Footer)">-->
+                        <!--<div class="form-line">-->
+                            <!--<input type="text" name="site" id="site" value="" placeholder="Website URL *" class="textfild">-->
+                            <!--<input type="text" name="email" id="email" value="" placeholder="Email Address *" class="textfild">-->
+                        <!--</div>-->
+                        <!--<input type="text" name="phone" id="tel" value="" placeholder="Tel" class="textfild2">-->
+                        <!--<div class="select">-->
+                            <!--<span class="placeholder">I Want to</span>-->
+                            <!--<ul>-->
+                                <!--<li>Acquire visitors to my page(s)</li>-->
+                                <!--<li>Monetize my website</li>-->
+                            <!--</ul>-->
+                        <!--</div>-->
+                        <!--<textarea name="body" id="msg" placeholder="Your Message" rows="24" cols="80"></textarea>-->
+                        <!--<button class="formBtn" id="submit" type="button">Submit</button>-->
+                    <!--</form>-->
+                <!--</div>-->
+            <!--</div>-->
         </div>
     </div>
     <div class="bottom-box">© Copyright  new bidder. 2017 All rights reserved<span><a href="#">Privacy policy</a>|<a href="#">Terms and conditions</a></span></div>
 
 </footer>
-<script>
-    $("body").css('padding-right','0px');
-</script>
+
 </body>
 
 <script src="js/swiper.min.js"></script>
@@ -694,7 +691,9 @@
         $('.b-pic-two').addClass('animated shake');
 });
 </script>
-
+<script>
+    $("body").css('padding-right','0px');
+</script>
 <script src="js/select.js"></script>
 <script src="js/jshashtable-2.1_src.min.js"></script>
 <script src="js/jquery.numberformatter-1.2.3.min.js"></script>
