--- a/Front/src/tpl/botBlacklist-edit-dialog.html
+++ b/Front/src/tpl/botBlacklist-edit-dialog.html
@@ -1,7 +1,7 @@
 <md-dialog class="cs-edit-dialog bot-blacklist-dialog" ng-cloak>
   <md-toolbar>
     <div>
-      <h1 class="setting-title">
+      <h1 class="setting-title ">
         New Bot Rule
         <p>To create a new bot rule, define a name and add at least 1 IP / IP range or useragent value within the respective fields.</p>
         <p>The maximum amount of values* that can be added within a rule is 10. You can still add 10 value(s).
@@ -10,7 +10,7 @@
     </div>
   </md-toolbar>
 
-    <md-dialog-content class="md-dialog-content">
+    <md-dialog-content class="md-dialog-content botblack-height">
 
         <form name="editForm" class="form-horizontal bot-blacklist-editForm">
             <div class="form-group">
