--- a/Front/src/tpl/change-paln-dialog.html
+++ b/Front/src/tpl/change-paln-dialog.html
@@ -36,7 +36,7 @@
                           <li class="hg"><em>&times;</em></li>
                           <li class="hg"><em>&times;</em></li>
                       </ol>
-                      <button class="btn p-btn btn-three p-btn-01" type="button"><p>SELECT PLAN<i class="icon-angle-right"></i></p></button>
+                      <button class="btn p-btn btn-three p-btn-01" type="button" ng-click="editChangePlan({'id': 1})"><p>SELECT PLAN<i class="icon-angle-right"></i></p></button>
 
                   </div></li>
             </div>
@@ -63,7 +63,7 @@
                             <li>1 additional users</li>
                             <li>10% volume discount</li>
                         </ol>
-                        <button class="btn p-btn btn-three p-btn-02" type="button"><p>SELECT PLAN<i class="icon-angle-right"></i></p></button>
+                        <button class="btn p-btn btn-three p-btn-02" type="button" ng-click="editChangePlan({'id': 2})"><p>SELECT PLAN<i class="icon-angle-right"></i></p></button>
 
                     </div></li>
             </div>
@@ -90,7 +90,7 @@
                             <li>2 additional users</li>
                             <li>15% volume discount</li>
                         </ol>
-                        <button class="btn p-btn btn-three p-btn-03" type="button"><p>SELECT PLAN<i class="icon-angle-right"></i></p></button>
+                        <button class="btn p-btn btn-three p-btn-03" type="button" ng-click="editChangePlan({'id': 3})"><p>SELECT PLAN<i class="icon-angle-right"></i></p></button>
 
                     </div></li>
             </div>
@@ -117,7 +117,7 @@
                             <li>5 additional users</li>
                             <li>20% volume discount</li>
                         </ol>
-                        <button class="btn p-btn btn-three p-btn-04" type="button"><p>SELECT PLAN<i class="icon-angle-right"></i></p></button>
+                        <button class="btn p-btn btn-three p-btn-04" type="button" ng-click="editChangePlan({'id': 4})"><p>SELECT PLAN<i class="icon-angle-right"></i></p></button>
                     </div>
                 </li>
             </div>
